# metaflow-demo

./: README.md  pyproject.toml
src/: train_model_flow.py  training_data_flow.py
