[tool.poetry]
name = "metaflow-demo"
version = "0.1.0"
description = ""
authors = ["Dean Budd <dbudd@seek.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
metaflow = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
